--- a/notebook/data-exploration-luca.ipynb
+++ b/notebook/data-exploration-luca.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        "4  2004-01-10  48  20  45  21  12   6   5       1  29785269"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,6 +136,15 @@
    "source": [
     "df = pd.read_csv(\"../EuroMillions_numbers.csv\", sep=\";\")\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_to_add = pd.DataFrame([['2021-01-02', 4, 7, 13, 22, 34, 4, 8, 0, 100000]], columns=list('Date', 'N1','N2','N3','N4','N5','E1','E2','Winner', 'Gain'))"
    ]
   },
   {
