--- a/notebook/data-exploration-julian.ipynb
+++ b/notebook/data-exploration-julian.ipynb
@@ -24,16 +24,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "source": [
-    "data = pd.read_csv(\"../EuroMillions_numbers.csv\", sep = ';')"
+    "data = pd.read_csv(\"../app/src/data/EuroMillions_numbers.csv\", sep = ';')"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "source": [
     "data.head()"
    ],
@@ -152,14 +152,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 7
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "source": [
     "type(data['Date'][1])"
    ],
@@ -172,14 +172,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 8
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "source": [
     "num = data[['N1', 'N2', 'N3', 'N4', 'N5']]\n",
     "num = num.melt()\n",
@@ -195,7 +195,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 9
     },
     {
      "output_type": "display_data",
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "source": [
     "def oddEvenPatterns(t):\n",
     "    nb = sum(1-n%2 for n in t)\n",
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 11,
    "source": [
     "def createRows(tirages, n=4):\n",
     "    tirages_tmp = np.copy(tirages)\n",
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "source": [
     "X = []\n",
     "y = []\n",
@@ -344,10 +344,9 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[1. 1. 1. ... 0. 0. 0.]\n",
-      "[1. 0. 1. ... 0. 0. 0.]\n",
-      "[24.          1.         34.          4.         36.          8.\n",
-      "  6.          0.14926183  0.32566218]\n"
+      "[1 1 1 ... 0 0 0]\n",
+      "[0 0 0 ... 0 0 0]\n",
+      "[41 10 20 15 49 11  6]\n"
      ]
     }
    ],
@@ -355,11 +354,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "source": [
     "model = SVC(probability=True)\n",
     "model.fit(X_train, y_train)\n",
-    "\n",
+    "print(X_test.shape)\n",
     "result = model.predict_proba(X_test)\n",
     "\n",
     "res1 = []\n",
@@ -387,10 +386,28 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[[2784 1098]\n",
-      " [ 234  234]]\n",
-      "0.26\n",
-      "0.6937931034482758\n"
+      "(2175, 7)\n",
+      "[[1206  536]\n",
+      " [ 217  216]]\n",
+      "0.3645569620253165\n",
+      "0.6537931034482759\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "source": [
+    "print(result[0][0])"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0.873779199150703\n"
      ]
     }
    ],
